--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.8.0
+APScheduler==3.11.0
 bcrypt==4.3.0
 beautifulsoup4==4.13.3
 certifi==2025.1.31
@@ -25,5 +26,6 @@ soupsieve==2.6
 SQLAlchemy==2.0.37
 starlette==0.45.3
 typing_extensions==4.12.2
+tzlocal==5.3.1
 urllib3==2.3.0
 uvicorn==0.34.0
